[package]
name = "stretchbox"
version = "0.1.0"
edition = "2021"
authors = [
    "Raunak Bhagat <rabhagat31@gmail.com>",
]
description = "A 2-dimensional layout solver."

[dependencies]
cherrytree = { git = "https://github.com/raunakab/cherrytree" }
indexmap = "2.0.0"
petgraph = "0.6.4"
slotmap = "1.0.6"
